del AdMapper